--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -18,6 +18,19 @@
             padding: 3px;
             box-sizing: border-box;
         }
+
+        /*.modal-body .form-horizontal .col-sm-2,
+        .modal-body .form-horizontal .col-sm-10 {
+            width: 100%
+        }
+
+        .modal-body .form-horizontal .control-label {
+            text-align: left;
+        }
+
+        .modal-body .form-horizontal .col-sm-offset-2 {
+            margin-left: 15px;
+        }*/
     </style>
 
 </head>
@@ -28,7 +41,7 @@
 <hr />
 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-<form class="row">
+<form >
     <div class="panel panel-default ">
         <div class="panel-heading">
             <h5 class="panel-title"><i class="icon-stack-plus position-left"></i>Create Fabric Order</h5>
@@ -38,44 +51,82 @@
                 <div class="form-group col-xs-4 form-inline">
                     <label for="BuyerName" class="control-label" style="width:35%;">Buyer Name</label>
                     <div style=" display: inline;">
-                        @*<input type="text" class="form-control" style="width:50%;" id="BuyerName" placeholder="Buyer Name" required autofocus>*@
-                        <div class="dropdown" style="width:50%; display:inline-block;">
-                            <button class="btn-sm btn-success dropdown-toggle" style="width:100%;" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                Dropdown
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                            </ul>
-                        </div>
-                        <a href="#" class="btn-sm btn-info" style="width:10%;display:inline">
+                        <select name="BuyerName" id="BuyerName" style="width:50%;" class="form-control input-sm" required autofocus></select>
+                        <a href="#" class="btn-sm btn-info" style="width:10%;display:inline" data-toggle="modal" data-target="#myModalHorizontal">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
+                        <!-- Modal -->
+                        <div class="modal fade" id="myModalHorizontal" tabindex="-1" role="dialog"
+                             aria-labelledby="myModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <!-- Modal Header -->
+                                    <div class="modal-header">
+                                        <button type="button" class="close"
+                                                data-dismiss="modal">
+                                            <span aria-hidden="true">&times;</span>
+                                            <span class="sr-only">Close</span>
+                                        </button>
+                                        <h4 class="modal-title" id="myModalLabel">
+                                            Modal title
+                                        </h4>
+                                    </div>
+
+                                    <!-- Modal Body -->
+                                    <div class="modal-body">
+                                        <form class="form-horizontal" role="form">
+                                            <div class="form-group">
+                                                <label class="col-sm-2 control-label"
+                                                       for="inputEmail3">Email</label>
+                                                <div class="col-sm-10">
+                                                    <input type="email" class="form-control"
+                                                           id="inputEmail3" placeholder="Email" />
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="col-sm-2 control-label"
+                                                       for="inputPassword3">Password</label>
+                                                <div class="col-sm-10">
+                                                    <input type="password" class="form-control"
+                                                           id="inputPassword3" placeholder="Password" />
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="col-sm-offset-2 col-sm-10">
+                                                    <div class="checkbox">
+                                                        <label>
+                                                            <input type="checkbox" /> Remember me
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="col-sm-offset-2 col-sm-10">
+                                                    <button type="submit" class="btn btn-default">Sign in</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+
+                                    <!-- Modal Footer -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default"
+                                                data-dismiss="modal">
+                                            Close
+                                        </button>
+                                        <button type="button" class="btn btn-primary">
+                                            Save changes
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group col-xs-4 form-inline">
                     <label for="FabricType" class="control-label" style="width:35%;">Sample Type</label>
                     <div style="display: inline;">
-                        @*<input type="text" class="form-control" style="width:50%;" id="FabricType" placeholder="Sample Type" required autofocus>*@
-                        <div class="dropdown" style="width:50%; display:inline-block;">
-                            <button class="btn-sm btn-success dropdown-toggle" style="width:100%;" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                Dropdown
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li><a href="#">Something else here</a></li>
-                            </ul>
-                        </div>
+                        <select name="sampleType" id="sampleType" style="width:50%;" class="form-control input-sm" required autofocus></select>
                         <a href="#" class="btn-sm btn-info" style="width:10%;">
                             <span class="glyphicon glyphicon-plus"></span>
                         </a>
@@ -159,6 +210,8 @@
             <tr>
                 <th></th>
                 <th>Id</th>
+                <th>BuyerID</th>
+                <th>FabricTypeID</th>
                 <th>BuyerName</th>
                 <th>FabricType</th>
                 <th>OrderNo</th>
@@ -176,6 +229,8 @@
             <tr>
                 <th></th>
                 <th>Id</th>
+                <th>BuyerID</th>
+                <th>FabricTypeID</th>
                 <th>BuyerName</th>
                 <th>FabricType</th>
                 <th>OrderNo</th>
@@ -197,6 +252,40 @@
 <script>
 
     $(document).ready(function () {
+
+        loadBuyerList();
+
+        function loadBuyerList() {
+            $.ajax({
+                type: "GET",
+                url: "/Fabric/GetBuyerList",
+                data: "{}",
+                success: function (data) {
+                    var s = '<option value="0">Please Buyer</option>';
+                    for (var i = 0; i < data.length; i++) {
+                        s += '<option value="' + data[i].Id + '">' + data[i].BuyerName + '</option>';
+                    }
+                    $("#BuyerName").html(s);
+                    loadFabricTypeList();
+                }
+            });
+        }
+
+        function loadFabricTypeList() {
+            $.ajax({
+                type: "GET",
+                url: "/Fabric/GetFabricTypeList",
+                data: "{}",
+                success: function (data)
+                {
+                    var s = '<option value="0">Please Sample Type</option>';
+                    for (var i = 0; i < data.length; i++) {
+                        s += '<option value="' + data[i].Id + '">' + data[i].FabricTypeName + '</option>';
+                    }
+                    $("#sampleType").html(s);
+                }
+            });
+        }
 
         $('#DeliveryDate').datetimepicker({
             defaultDate: new Date(),
@@ -229,7 +318,7 @@
                     "targets": [0]
                 },
                 {
-                    "targets": [1],
+                    "targets": [1, 2, 3],
                     "visible": false,
                     "searchable": false
                 }
@@ -243,6 +332,12 @@
                 },
                 {
                     "data": "Id"
+                },
+                {
+                    "data": "BuyerID"
+                },
+                {
+                    "data": "FabricTypeID"
                 },
                 { "data": "BuyerName" },
                 { "data": "FabricType" },
@@ -290,8 +385,8 @@
             event.preventDefault();
             var fabricObj = {
                 Id: '0',
-                BuyerName: $("#BuyerName").val(),
-                FabricType: $("#FabricType").val(),
+                BuyerID: $("#BuyerName").val(),
+                FabricTypeID: $("#sampleType").val(),
                 OrderNo: $("#OrderNo").val(),
                 Color: $("#Color").val(),
                 Note: $("#Note").val(),
@@ -327,8 +422,8 @@
         });
 
         function Setvalue(rowdata) {
-            $("#BuyerName").val(rowdata.BuyerName);
-            $("#FabricType").val(rowdata.FabricType);
+            $("#BuyerName").val(rowdata.BuyerID);
+            $("#sampleType").val(rowdata.FabricTypeID);
             $("#OrderNo").val(rowdata.OrderNo);
             $("#Color").val(rowdata.Color);
             $("#Note").val(rowdata.Note);
@@ -346,7 +441,7 @@
 
         function Reset() {
             $("#BuyerName").val("");
-            $("#FabricType").val("");
+            $("#sampleType").val("");
             $("#OrderNo").val("");
             $("#Color").val("");
             $("#Note").val("");
