fabric problem solved

--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -387,6 +387,8 @@
                 Id: '0',
                 BuyerID: $("#BuyerName").val(),
                 FabricTypeID: $("#sampleType").val(),
+                BuyerName: $("#BuyerName  option:selected").text(),
+                FabricType: $("#sampleType  option:selected").text(),
                 OrderNo: $("#OrderNo").val(),
                 Color: $("#Color").val(),
                 Note: $("#Note").val(),
