--- a/TextileResearchDevelopment/Views/Fabric/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Fabric/Index.cshtml
@@ -5,10 +5,7 @@
     }
 }
 
-
 <head>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
         <style>
             .btn {
                 padding: 10px 20px;
@@ -35,8 +32,6 @@
                     margin-left: 15px;
                 }*/
         </style>
-    
-
 </head>
 
 <h2>Fabric Entry Form</h2>
@@ -61,71 +56,7 @@
                                 <span class="glyphicon glyphicon-plus"></span>
                             </a>
                             <!-- Modal -->
-                            <div class="modal fade" id="myModalHorizontal" tabindex="-1" role="dialog"
-                                 aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <!-- Modal Header -->
-                                        <div class="modal-header">
-                                            <button type="button" class="close"
-                                                    data-dismiss="modal">
-                                                <span aria-hidden="true">&times;</span>
-                                                <span class="sr-only">Close</span>
-                                            </button>
-                                            <h4 class="modal-title" id="myModalLabel">
-                                                Modal title
-                                            </h4>
-                                        </div>
-
-                                        <!-- Modal Body -->
-                                        <div class="modal-body">
-                                            <form class="form-horizontal" role="form">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label"
-                                                           for="inputEmail3">Email</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="email" class="form-control"
-                                                               id="inputEmail3" placeholder="Email" />
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label"
-                                                           for="inputPassword3">Password</label>
-                                                    <div class="col-sm-10">
-                                                        <input type="password" class="form-control"
-                                                               id="inputPassword3" placeholder="Password" />
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <div class="col-sm-offset-2 col-sm-10">
-                                                        <div class="checkbox">
-                                                            <label>
-                                                                <input type="checkbox" /> Remember me
-                                                            </label>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <div class="col-sm-offset-2 col-sm-10">
-                                                        <button type="submit" class="btn btn-default">Sign in</button>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                        </div>
-
-                                        <!-- Modal Footer -->
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default"
-                                                    data-dismiss="modal">
-                                                Close
-                                            </button>
-                                            <button type="button" class="btn btn-primary">
-                                                Save changes
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                     <div class="form-group col-xs-4 form-inline">
@@ -232,7 +163,7 @@
             </thead>
             <tfoot>
                 <tr>
-                    <th></th>
+                    <th style="visibility:hidden;"></th>
                     <th></th>
                     <th></th>
                     <th></th>
@@ -322,9 +253,9 @@
 
             "columnDefs": [
                 {
+                    "targets": [0],
                     "searchable": false,
                     "orderable": false,
-                    "targets": [0]
                 },
                 {
                     "targets": [1, 2, 3],
@@ -335,6 +266,7 @@
 
             "columns": [
                 {
+                    "searchable": false,
                     "render": function (data, type, full, meta) {
                         return table.data().count();
                     }
