--- a/TextileResearchDevelopment/Views/Knitting/Index.cshtml
+++ b/TextileResearchDevelopment/Views/Knitting/Index.cshtml
@@ -28,38 +28,27 @@
 <hr />
 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-
-
 <div id="MainDiv" class="panel panel-default ">
 
     <div class="modal fade" id="modalRegisterForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header text-center">
-                    <h4 class="modal-title w-100 font-weight-bold">Sign up</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Panel inside of Modal window</h4>
                 </div>
-                <div class="modal-body mx-3">
-                    <div class="md-form mb-5">
-                        <i class="fas fa-user prefix grey-text"></i>
-                        <input type="text" id="orangeForm-name" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="orangeForm-name">Your name</label>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">Panel title</div>
+                                <div class="panel-body">
+                                    Panel content
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="md-form mb-5">
-                        <i class="fas fa-envelope prefix grey-text"></i>
-                        <input type="email" id="orangeForm-email" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="orangeForm-email">Your email</label>
-                    </div>
-
-                    <div class="md-form mb-4">
-                        <i class="fas fa-lock prefix grey-text"></i>
-                        <input type="password" id="orangeForm-pass" class="form-control validate">
-                        <label data-error="wrong" data-success="right" for="orangeForm-pass">Your password</label>
-                    </div>
-
                 </div>
                 <div class="modal-footer d-flex justify-content-center">
                     <button class="btn btn-deep-orange">Sign up</button>
@@ -68,8 +57,8 @@
         </div>
     </div>
 
-    <div class="text-center">
-        <a href="" class="btn btn-default btn-rounded mb-4" data-toggle="modal" data-target="#modalRegisterForm">
+    <div class="text-left">
+        <a href="" class="btn-default sm-4" data-toggle="modal" data-target="#modalRegisterForm">
             Launch
             Modal Register Form
         </a>
